Agregado logo de WOBI, y quitado formato ODT (no funciona el merge en Headers)

--- a/upload.html
+++ b/upload.html
@@ -177,13 +177,13 @@
         <input name="pauta" id="pauta" type="file" />
       </label>
 
-      <label>
+      <!--label>
         <span>Formato:</span>
         <select name="formato" id="formato">
           <option value="ODT">ODT - OpenOffice / LibreOffice Writer</option>
           <option value="DOCX">DOCX - Microsoft Word</option>
         </select>
-      </label>
+      </label-->
 
       <div class="strike">
         <span>Datos generales/informativos:</span>
